--- a/SupplierRanking/Views/Comprador/EsqueceuSuaSenha.cshtml
+++ b/SupplierRanking/Views/Comprador/EsqueceuSuaSenha.cshtml
@@ -151,9 +151,9 @@
 
 <div class="row col-12 login-options justify-content-center p-5">
 
-    <span class="col-8 error-msg alert-danger text-center p-2 mt-3 mb-4 hide">
+    @*<span class="col-8 error-msg alert-danger text-center p-2 mt-3 mb-4 hide">
         Preencha o(s) campo(s) corretamente! @(ViewBag.Message)
-    </span>
+    </span>*@
 
     
 
@@ -161,7 +161,7 @@
 
     <!--- Botao Entrar --->
     <div class="col-6 d-flex justify-content-end align-items-center pl-0 pr-4">
-        <button id="btnEnviarEmail" type="submit" class="restaura-senha-form-btn">
+        <button id="btnEnviarEmail" type="submit" class="">
             Entrar
         </button>
     </div>
