--- a/SupplierRanking/Views/Fornecedor/NovaSenha.cshtml
+++ b/SupplierRanking/Views/Fornecedor/NovaSenha.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container-senha-nova">
     <div class="wrap-login100" style="background-color: white;">
-        <h2 style="margin-left: 264px;">Restaurar Senha</h2>
+        <h2 style="text-align: center;margin-bottom: 68px;">Nova Senha</h2>
 
         <br />
         <br />
@@ -65,8 +65,8 @@
 
 
 
-            <div class=" col-6 d-flex justify-content-end align-items-center pl-0 pr-4">
-                <button id="btnConfirmaSenha" type="submit" class="confirma-senha-btn  ">
+            <div class=" col-6 d-flex justify-content-end align-items-center pl-0 pr-4" style="margin-left: 91px">
+                <button id="btnConfirmaSenha" type="submit" class="login-form-btn ">
                     Confirmar
                 </button>
             </div>
