--- a/SupplierRanking/Views/Shared/_LayoutLogin.cshtml
+++ b/SupplierRanking/Views/Shared/_LayoutLogin.cshtml
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="~/Content/config/css/style.css"/>
         <link rel="stylesheet" href="~/Content/css/style_login.css" />
         <link rel="stylesheet" href="~/Content/css/login.css" />
+        <link href="~/Content/css/nova-senha.css" rel="stylesheet" />
         
         <!-- FIM - Nossos CSS -->
 
@@ -20,7 +21,7 @@
         <!-- INICIO - Conteudo -->
         <div class="container-login">
             <div class="wrap-login justify-content-center">
-                @RenderBody()
+               @RenderBody()
             </div>
         </div>
         <!-- FIM - Conteudo -->
