--- a/SupplierRanking/Content/css/login.css
+++ b/SupplierRanking/Content/css/login.css
@@ -82,7 +82,7 @@
     line-height: 1.5;
 }
 
-.focus-input {
+/*.focus-input {
 	display: block;
 	position: absolute;
 	border-radius: 10px;
@@ -92,8 +92,8 @@
 	width: 94.5%;
 	height: 100%;
 	box-shadow: 0px 0px 0px 0px;
-	color: #0C496Bc9
-}
+	
+}*/
 
 .input:focus+.focus-input {
 	-webkit-animation: anim-shadow 0.5s ease-in-out forwards;
