--- a/SupplierRanking/Views/Comprador/EsqueceuSuaSenha.cshtml
+++ b/SupplierRanking/Views/Comprador/EsqueceuSuaSenha.cshtml
@@ -156,13 +156,31 @@
     </span>*@
 
     
+    <div class="col-6 d-flex justify-content-end align-items-center pl-0 pr-4"
+         style="width: 61px; height: 21px; text-align: center;">
+   
+   <!---Botão voltar-->
+        <div style="margin-right: 175px;" class="text-left pt-3">
 
-       
+            <a class="sub-link" href="/Login/Login">
+                Voltar
+            </a>
+        </div>
+        
 
-    <!--- Botao Entrar --->
+    </div>
+    
+  
+
+    <!--- Botao Enviar --->
     <div class="col-6 d-flex justify-content-end align-items-center pl-0 pr-4">
-        <button id="btnEnviarEmail" type="submit" class="restaura-senha-form-btn">
-            Entrar
+        
+        <button id="btnEnviarEmail" type="submit" class="login-form-btn">
+            Enviar
         </button>
+        
+       
+        
+
     </div>
 </div>
