--- a/SupplierRanking/Views/Fornecedor/EsqueceuSuaSenha.cshtml
+++ b/SupplierRanking/Views/Fornecedor/EsqueceuSuaSenha.cshtml
@@ -144,14 +144,21 @@
     <div class="row col-12 login-options justify-content-center p-5">
 
         @*<span class="col-8 error-msg alert-danger text-center p-2 mt-3 mb-4 hide">
-            Preencha o(s) campo(s) corretamente! @(ViewBag.Message)
-        </span>*@
+                Preencha o(s) campo(s) corretamente! @(ViewBag.Message)
+            </span>*@
+        
+        <!---Botão voltar-->
+        <div style="margin-right: 175px;" class="text-left pt-3">
+
+            <a class="sub-link" href="/Login/Login">
+                Voltar
+            </a>
+        </div>
+
+       
 
 
-
-
-
-        <!--- Botao Entrar --->
+        <!--- Botao Enviar --->
         <div class=" col-6 d-flex justify-content-end align-items-center pl-0 pr-4">
             <button id="btnEnviarEmail" type="submit" class="restaura-senha-form-btn">
                 Entrar
