--- a/SupplierRanking/Views/Fornecedor/CadastroFornecedor.cshtml
+++ b/SupplierRanking/Views/Fornecedor/CadastroFornecedor.cshtml
@@ -4,13 +4,13 @@
 }
 
 
-<div class="wrap-cadastro-fornecedor">
+<div class="wrap-cadastro-fornecedor pl-2 pr-2">
 
-    <div class="row col-12 form-title justify-content-center text-center mt-4">
+    <div class="row col-12 form-title justify-content-center text-center mt-4 mb-4">
         <h2>Crie sua Conta</h2>
     </div>
 
-    <div class="row text-center pt-5">
+    <div class="row text-center pt-5 mt-5">
 
         <div class="col-7 align-items-center wrap-options">
             Selecione o seu tipo de usuário:
@@ -55,8 +55,8 @@
         <form class="col-12 cadastro-form d-flex justify-content-end mt-4 pt-4 pr-2 pl-0"
               method="post" action="../Fornecedor/CadastroFornecedor">
 
-            <!--- PRIMEIRA TELA --->
-            <div class="col-5 form-forn-1-part form-parts justify-content-center">
+            <!------------------ PRIMEIRA TELA ------------------>
+            <div class="col-5 form-forn-first-part form-parts justify-content-center">
 
                 <!--- CNPJ --->
                 <div class="col-11 wrap-input p-0">
@@ -102,8 +102,8 @@
             </div>
 
 
-            <!--- SEGUNDA TELA --->
-            <div class="row col-12 form-forn-second-part form-parts justify-content-between pl-5 pr-5">
+            <!------------------ SEGUNDA TELA ------------------>
+            <div class="row col-12 form-forn-second-part form-parts justify-content-between pl-5 pr-5 hide">
                 <div class="row ml-4 mb-4">
                     Informe o endereço de sua localização:
                 </div>
@@ -132,7 +132,7 @@
 
                         <!--- UF --->
                         <div class="align-items-center justify-content-between p-0">
-                            <select name="uf" class="states text-center"  style="width:auto">
+                            <select name="uf" class="states text-center" style="width:auto">
                                 <option disabled>UF</option>
                                 <option value="AC">AC</option>
                                 <option value="AL">AL</option>
@@ -172,26 +172,25 @@
                     </div>
 
                     <!--- Telefone --->
-                    <div class="col-6 wrap-input">
+                    <div class="col-6 wrap-input pl-0">
                         <input class="input" type="text" name="telefone" maxlength="10" placeholder="(00) 0000-0000" data-mask="(00) 0000-0000" data-mask-sectionFocus="true">
                     </div>
 
                     <!--- Celular --->
-                    <div class="col-6 wrap-input">
+                    <div class="col-6 wrap-input pr-0">
                         <input class="input" type="text" name="celular" placeholder="(00) 00000-0000" data-mask="(00) 00000-0000" data-mask-sectionFocus="true">
                     </div>
-
-                    <input type="text" name="descricao" placeholder="Uma breve descrição">
                 </div>
             </div>
 
-@*
-            <!--- TERCEIRA TELA --->
-            <div class="col-12 form-forn-third-part form-parts justify-content-between text-center pl-5 pr-5">
+            @*<input type="text" name="descricao" placeholder="Uma breve descrição">*@
+
+            <!------------------ TERCEIRA TELA ------------------>
+            <div class="col-12 form-forn-third-part form-parts justify-content-between text-center pl-5 pr-5 hide">
                 Seleciona abaixo todas as categorias de fornecimento que tenha interesse: <br />
                 E não se preocupe se esquecer de alguma, pois será possível editar depois.
 
-              <div class="col-4 pt-5">
+                <div class="mt-5" style="height:460px; overflow-y:scroll; ">
                     @foreach (var c in ViewBag.ListaCategorias)
                     {
                         <div class="col-12 checkbox-container text-left mt-4 p-0">
@@ -204,26 +203,26 @@
                     }
                 </div>
             </div>
-    </div> *@
+        </form>
+    </div> 
 
-    </form>
     <div class="row col-12 cadastro-options align-items-center pl-5 pr-5">
 
         <span class="@ViewBag.cssClass">
             @ViewBag.Message
         </span>
 
-        <div class="col-12 d-flex form-forn-first-part p-0">
+        <div class="col-12 d-flex p-0">
             <!--- Voltar para Login --->
-            @*<div class="col-6 d-flex align-self-center text-left">
-                <a class="sub-link" href="/Login/Login">
+            <div class="col-6 d-flex form-forn-btn align-self-center text-left">
+                <a id="btnLogin" class="sub-link" href="/Login/Login">
                     Login
                 </a>
-            </div>*@
+            </div>
 
             <!--- Voltar --->
-            <div class="col-6 d-flex align-self-center text-left">
-                <button class="sub-link" href="">
+            <div class="col-6 d-flex form-forn-btn align-self-center text-left hide">
+                <button id="btnVoltar" class="sub-link">
                     Voltar
                 </button>
             </div>
