--- a/SupplierRanking/Views/Shared/_LayoutLogin.cshtml
+++ b/SupplierRanking/Views/Shared/_LayoutLogin.cshtml
@@ -50,6 +50,7 @@
         <!-- INÍCIO - Nossos JS -->
         <script src="~/Content/js/login.js"></script>
         <script src="~/Content/js/esqueceu-senha.js"></script>
+        <script src="~/Content/js/esqueceu-senha-comprador.js"></script>
         
     </body>
 </html>
