--- a/SupplierRanking/Views/Comprador/EsqueceuSuaSenha.cshtml
+++ b/SupplierRanking/Views/Comprador/EsqueceuSuaSenha.cshtml
@@ -97,7 +97,7 @@
 </div>
 
 <!--- Formulario de Login --->
-<form class="row restaurar-senha-comprador-form justify-content-center p-5  hide"
+<form class="row restaurar-senha-comprador-form justify-content-center p-5 hide"@
       method="post" action="../Comprador/EsqueceuSuaSenha">
     
 
