--- a/SupplierRanking/Views/Home/SobreNos.cshtml
+++ b/SupplierRanking/Views/Home/SobreNos.cshtml
@@ -87,7 +87,7 @@
                 <div>
                     <div class="media d-block media-custom text-center">
                         <img class="img-fluid"
-                             src="/Content/images/person_2.jpg" 
+                             src="~/Content/images/luizao3.png" 
                              alt="Image Placeholder">
                         <div class="media-body p-3">
                             <h3 class="name">Luiz Gustavo</h3>
