--- a/SupplierRanking/Views/Login/Login.cshtml
+++ b/SupplierRanking/Views/Login/Login.cshtml
@@ -135,7 +135,7 @@
 
         <!--- Criar Conta --->
         <div class="text-left pt-3">
-            <a class="sub-link" href="/Login/Cadastro">
+            <a class="sub-link" href="/Comprador/CadastroPessoaFisica">
                 Criar conta
             </a>
         </div>
