--- a/SupplierRanking/Views/Login/Cadastro.cshtml
+++ b/SupplierRanking/Views/Login/Cadastro.cshtml
@@ -16,7 +16,7 @@
         <div class="row align-items-center justify-content-center mt-4">
             <!--- Comprador --->
             <div class="col-5 js-tilt" data-tilt>
-                <button id="btnComprador" class="col-9 switch-wrapper p-3">
+                <button id="btnComprador" class="col-9 switch-wrapper active-switch p-3">
                     <img src="/Content/images/comprador.png" />
                     <h6 class="switch-person-title p-2">Comprador</h6>
                 </button>
@@ -25,7 +25,7 @@
             <!--- Switch --->
             <label class="switch m-3">
                 <input id="switchFornecedor" type="checkbox">
-                <span class="slider slider-fornecedor round unchecked"></span>
+                <span class="slider slider-fornecedor round"></span>
             </label>
 
             <!--- Fornecedor --->
