--- a/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
@@ -84,24 +84,33 @@
                     <div class="modal-body">
                         <p>Filtrar por:</p>
 
-                        <!---Entrega-->
-                        <label for="entrega">Entrega</label>
-                        <input name="entrega" type="checkbox" />
-                        </br>
-                        <!---Qualidade-->
-                        <label for="qualidade">Qualidade</label>
-                        <input name="qualidade" type="checkbox" />
-                        </br>
-                        <!---Preço-->
-                        <label for="preco">Preço</label>
-                        <input name="preco" type="checkbox" />
-                        </br>
-                        <label for="satisfacao">Satisfação</label>
-                        <input name="satisfacao" type="checkbox" />
-                        </br>
-                        <label for="atendimento  ">Atendimento</label>
-                        <input name="atendimento" type="checkbox" />
-                       
+                      
+                        <label style="margin-left: 4px;" class="container">
+                            Entrega
+                            
+                            <input  type="radio" checked="checked" name="radio">
+                            <span style="margin-left: -15px;" class="checkmark"></span>
+                        </label>
+                        <label style="margin-left: 4px;" class="container">
+                            Qualidade
+                            <input  type="radio" name="radio">
+                            <span style="margin-left: -15px;" class="checkmark"></span>
+                        </label>
+                        <label style="margin-left: 4px;" class="container">
+                            Preço
+                            <input type="radio" name="radio">
+                            <span style="margin-left: -15px;" class="checkmark"></span>
+                        </label>
+                        <label style="margin-left: 4px;" class="container">
+                            Satisfação
+                            <input  type="radio" name="radio">
+                            <span style="margin-left: -15px;" class="checkmark"></span>
+                        </label>
+                        <label style="margin-left: 4px;" class="container">
+                            Atendimento
+                            <input  type="radio" name="radio">
+                            <span style="margin-left: -15px;" class="checkmark"></span>
+                        </label>
 
                     </div>
                     <div class="modal-footer">
