--- a/SupplierRanking/Views/Shared/Layout_logada.cshtml
+++ b/SupplierRanking/Views/Shared/Layout_logada.cshtml
@@ -19,7 +19,7 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
 </head>
 
-<body style="background: linear-gradient(-135deg, #0e81b6, #c5c5c5);">
+<body style="background: white;">
     
    
     
@@ -41,12 +41,12 @@
     <script type="text/javascript">
 
         function moverMenu(){
-       var mover = document.getElementById('sidebar').style.width = '300px';
-       var perfil = document.getElementById('perfil').style.marginLeft = '70px';
+       //var mover = document.getElementById('sidebar').style.width = '300px';
+       var perfil = document.getElementById('perfil').style.marginLeft = '90px';
 }
 
 function moverMenu2(){
-    var mover = document.getElementById('sidebar').style.width='150px';
+    //var mover = document.getElementById('sidebar').style.width='150px';
     var perfil = document.getElementById('perfil').style.marginLeft = '20px';
 }
 
