--- a/SupplierRanking/Views/HomeLogada/Perfil.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Perfil.cshtml
@@ -40,7 +40,10 @@
     <!-- Page Content  -->
     <div id="content" style="background: white">
         
-        <section>
+        <section style=" width: 100%;height: 87px;background: #0C496BE6;">
+
+
+
             <nav class="navbar navbar-expand-lg navbar-light bg-light" style="width: 1000px;position:absolute;left: 30%;">
                 <div class="container-fluid">
                     <!-- <button type="button" id="sidebarCollapse" onmouse="menu()"class="btn btn-info">
@@ -77,16 +80,64 @@
             left: 31%;"></div>
 
         
-            <div style="width: 100%;height: 1090px;background-color:white;margin-top:89px;">
-            
+        <div style="width: 100%;height: 500px;background-color: white;margin-top: 89px;border: 1px solid black;margin-top: 0px;">
+            <section>
+                <div style="width:210px;height:210px;background:white;position: absolute;left: 28%;border: 3px solid black;top:138px;"></div>
+
+                <h1 style="position: absolute;left: 45%;">Nome do Fornecedor</h1>
+
+                <div style="position: absolute;left: 50%;margin-top: 89px;">
+                    <span style=" color: orange;" class="fa fa-star checked"></span>
+                    <span style=" color: orange;" class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                    <span class="fa fa-star"></span>
+
+                    <button style="background: url('../Content/images/avaliar.png') no-repeat;width: 50px;height:50px;
+                     position: absolute;margin-left: 240px;margin-top: -59px;"></button>
+
+                    <img style="position: absolute;right: 538px;top: 190px;width:40px;" src="~/Content/images/endereco.png" />
+
+
+                    <img style="position: absolute;right: 538px;top: 280px;width:40px;" src="~/Content/images/phone.png" />
+                    <img style="position: absolute;right: 47px;top: 280px;width:40px;" src="~/Content/images/email1.png" />
+
+                   
 
 
 
+                </div>
 
 
 
-            
-            </div>
+            </section>
+
+           
+
+        </div>
+              <div style="width: 100%;height: 500px;background-color: white;margin-top: 89px;margin-top: 2px;">
+
+
+                 <section>
+
+                    <h1 style="position: absolute;left: 48%;">Descrição</h1>
+
+                    <form  style="position: absolute;left: 50%;margin-top:200px;">
+                        <input type="file" name="pic" accept="image/*">
+                        <input  type="submit">
+                    </form>
+
+                    
+
+                </section>
+
+
+              </div>  
+                               
+      
+
+
+          
 
            
 
